--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "/dist"
   ],
   "scripts": {
-    "build": "tsc",
-    "prepare": "npm run build"
+    "build": "tsc && npm run",
+    "prepare": "npm run build",
   },
   "devDependencies": {
     "typescript": "^5.7.2"
