adds missing 'npm run' when generating defs

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "tsc",
     "build:defs": "tsc --declaration --outDir .\\dist\\. --emitDeclarationOnly",
-    "prepare": "npm run build && build:defs"
+    "prepare": "npm run build && npm run build:defs"
   },
   "devDependencies": {
     "typescript": "^5.7.2"
