--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0-beta.0",
   "description": "Library for consuming slysoft+json and easily interpreting/calling links",
   "main": "dist/index.js",
-  "module": "./dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
