--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0-beta.0",
   "description": "Library for consuming slysoft+json and easily interpreting/calling links",
   "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/slyjeff/rest-resource-client-ts.git"
@@ -14,7 +13,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "build:defs": "tsc --declaration --outDir .\\dist\\. --emitDeclarationOnly",
+    "build:defs": "tsc --declaration --outDir .\\types\\. --emitDeclarationOnly",
     "prepare": "npm run build && npm run build:defs"
   },
   "devDependencies": {
