--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@slysoft/rest-resource-client",
   "version": "1.0.0-beta.0",
   "description": "Library for consuming slysoft+json and easily interpreting/calling links",
-  "main": "dist/index.js",
-  "types": "types/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/slyjeff/rest-resource-client-ts.git"
