--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@slysoft/rest-resource-client",
   "version": "1.0.0-beta.0",
   "description": "Library for consuming slysoft+json and easily interpreting/calling links",
-  "main": "./dist/index.js",
-  "types": "./types/index.d.ts",
+  "main": "/dist/index.js",
+  "types": "/dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/slyjeff/rest-resource-client-ts.git"
@@ -11,9 +11,12 @@
   "files": [
     "/dist"
   ],
+  "exports": [
+    "./dist"
+  ],
   "scripts": {
     "build": "tsc",
-    "build:defs": "tsc --declaration --outDir .\\types\\. --emitDeclarationOnly",
+    "build:defs": "tsc --declaration --outDir .\\dist\\. --emitDeclarationOnly",
     "prepare": "npm run build && npm run build:defs"
   },
   "devDependencies": {
