--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "@slysoft/rest-resource-client",
   "version": "1.0.0-beta.0",
   "description": "Library for consuming slysoft+json and easily interpreting/calling links",
-  "main": "/dist/index.js",
-  "types": "/dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/slyjeff/rest-resource-client-ts.git"
   },
   "files": [
-    "/dist"
+    "./dist"
   ],
   "scripts": {
     "build": "tsc",
